# lentil

./: README.md
cli/: .gitignore  dune-project  flake.nix
cli/lib/: api.ml  api.mli  context.ml  context.mli  dune  file.ml  file.mli  process.ml  process.mli  server.ml  server.mli
cli/test/: dune
frontend/: index.html  package-lock.json  package.json
frontend/src/: Annotation.tsx  Annotations.tsx  App.tsx  ErrorMessage.tsx  Header.tsx  Loading.tsx  SuggestedFix.tsx  main.css  socket.ts
idea/: idea.typ
server/: .gitignore  database.py  llm.py  main.py  pyproject.toml  test_app.py  test_database.py
server/chroma/: chroma.sqlite3
server/tests/: error1.py  error2.py  error3.py  error4.py  error5.py  error6.py  error7.py  no_error1.py  no_error2.py  no_error3.py
